Code improvements (URI changed to URL)